# DynamicDAS

./: README.md
EdgeDevice/: CMakeLists.txt  README.md  prj.conf
EdgeDevice/src/: main - TL.c  main - extended.c  main.c
FogNode/: Makefile  SeLDA  SeLDA-basic  SeLDA-basic.c  SeLDA-extend  SeLDA-extended.c
